Fix read bugs, add array initial controls, polish code