@@ -1,6 +1,7 @@
 package com.lapissea.cfs.io.instancepipe;
 
 import com.lapissea.cfs.chunk.ChunkDataProvider;
+import com.lapissea.cfs.exceptions.FixedFormatNotSupportedException;
 import com.lapissea.cfs.exceptions.MalformedStructLayout;
 import com.lapissea.cfs.io.content.ContentReader;
 import com.lapissea.cfs.io.content.ContentWriter;
@@ -24,29 +25,35 @@ import static java.util.function.Predicate.*;
 
 public class FixedContiguousStructPipe<T extends IOInstance<T>> extends StructPipe<T>{
 	
-	public static <T extends IOInstance<T>> FixedContiguousStructPipe<T> of(Class<T> type){
+	public static <T extends IOInstance<T>> StructPipe<T> of(Class<T> type){
 		return of(Struct.of(type));
 	}
-	public static <T extends IOInstance<T>> FixedContiguousStructPipe<T> of(Struct<T> struct){
+	public static <T extends IOInstance<T>> StructPipe<T> of(Struct<T> struct){
 		return of(FixedContiguousStructPipe.class, struct);
 	}
 	
-	private final List<IOField<T, ?>>                     ioFields;
-	private final Map<IOField<T, NumberSize>, NumberSize> maxValues;
+	private Map<IOField<T, NumberSize>, NumberSize> maxValues;
 	
 	public FixedContiguousStructPipe(Struct<T> type){
 		super(type);
 		
+		if(DEBUG_VALIDATION){
+			getSizeDescriptor().requireFixed();
+		}
+	}
+	@Override
+	protected List<IOField<T, ?>> initFields(){
+		
 		Map<IOField<T, NumberSize>, List<IOField<T, ?>>> sizeDeps=
-			type.getFields().byType(NumberSize.class)
-			    .filter(f->f.getUsageHints().contains(DYNAMIC_SIZE_RESOLVE_DATA))
-			    .collect(Collectors.toMap(
-				    em->em,
-				    em->type.getFields()
-				            .stream()
-				            .filter(f->f.getDependencies().contains(em))
-				            .collect(Collectors.toList()))
-			    );
+			getType().getFields().byType(NumberSize.class)
+			         .filter(f->f.getUsageHints().contains(DYNAMIC_SIZE_RESOLVE_DATA))
+			         .collect(Collectors.toMap(
+				         em->em,
+				         em->getType().getFields()
+				                      .stream()
+				                      .filter(f->f.getDependencies().contains(em))
+				                      .collect(Collectors.toList()))
+			         );
 		
 		maxValues=sizeDeps.entrySet()
 		                  .stream()
@@ -67,66 +74,32 @@ public class FixedContiguousStructPipe<T extends IOInstance<T>> extends StructPi
 		for(IOField<T, NumberSize> f : maxValues.keySet()){
 			if(!f.getDependencies().isEmpty()) throw new ShouldNeverHappenError("this value should not have deps?");
 		}
-		
-		ioFields=IOFieldTools.stepFinal(
-			type.getFields()
-			    .stream()
-			    .map(f->sizeDeps.containsKey(f)?f:f.forceMaxAsFixedSize())
-			    .collect(Collectors.toList()),
-			List.of(
-				IOFieldTools::dependencyReorder,
-				list->list.stream().filter(not(sizeDeps::containsKey)).toList(),
-				IOFieldTools::mergeBitSpace
-			));
-		
-		if(DEBUG_VALIDATION){
-			getSizeDescriptor().requireFixed();
+		try{
+			return IOFieldTools.stepFinal(
+				getType().getFields()
+				         .stream()
+				         .map(f->sizeDeps.containsKey(f)?f:f.forceMaxAsFixedSize())
+				         .collect(Collectors.toList()),
+				List.of(
+					IOFieldTools::dependencyReorder,
+					list->list.stream().filter(not(sizeDeps::containsKey)).toList(),
+					IOFieldTools::mergeBitSpace
+				));
+		}catch(FixedFormatNotSupportedException e){
+			throw new MalformedStructLayout(getType().getType().getName()+" does not support fixed size layout because of "+e.getField(), e);
 		}
 	}
-	
 	@Override
 	public void write(ContentWriter dest, T instance) throws IOException{
 		maxValues.forEach((k, v)->k.set(instance, v));
-		
-		for(IOField<T, ?> field : ioFields){
-			if(DEBUG_VALIDATION){
-				var  desc =field.getSizeDescriptor();
-				long bytes=desc.toBytes(desc.requireFixed());
-				
-				var buf=dest.writeTicket(bytes).requireExact().submit();
-				field.writeReported(buf, instance);
-				try{
-					buf.close();
-				}catch(Exception e){
-					throw new IOException("Field "+TextUtil.toString(field)+" was written incorrectly", e);
-				}
-			}else{
-				field.writeReported(dest, instance);
-			}
-		}
+		writeIOFields(dest, instance);
 	}
 	
 	@Override
 	public T read(ChunkDataProvider provider, ContentReader src, T instance) throws IOException{
 		maxValues.forEach((k, v)->k.set(instance, v));
 		
-		for(IOField<T, ?> field : ioFields){
-			if(DEBUG_VALIDATION){
-				var  desc =field.getSizeDescriptor();
-				long bytes=desc.toBytes(desc.requireFixed());
-				
-				var buf=src.readTicket(bytes).requireExact().submit();
-				field.readReported(provider, buf, instance);
-				buf.close();
-			}else{
-				field.readReported(provider, src, instance);
-			}
-		}
+		readIOFields(provider, src, instance);
 		return instance;
-	}
-	
-	@Override
-	public List<IOField<T, ?>> getSpecificFields(){
-		return ioFields;
 	}
 }
